Update archetypes to the latest library versions and fix some issues in them. Fix bean overriding issue with HATEOAS integration